# Preserve

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  api_keys.example.json  dashboard.py  docker-compose.yml  manifest.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: CORPUS_EVAL.md  DEEPINFRA_ANALYSIS.md  DEPLOY.md  EVALUATION.md  LLM_BENCHMARK.md  PRIVACY_TAXONOMY.md  PROVIDER_COMPARISON.md  index.html
docs/assets/: app.js  context.js  examples.js  llm_extra.js  names.js  patterns.js  style.css
examples/: quickstart.py
poc/: demo_basic.py  demo_comparison.py  demo_network_audit.py
preserve/: __init__.py  __main__.py  allowlist.py  audit.py  client.py  config.py  context.py  detectors.py  domain_parsers.py  llm_review.py  mapping.py  name_scorer.py  normalcy.py  obfuscation.py  patterns.py  scrubber.py  structured.py  validators.py
preserve/api/: __init__.py  app.py  models.py  ratelimit.py  settings.py  streaming.py
scripts/: analyze_corpus.py  benchmark_full_pipeline.py  benchmark_llm.py  compute_llm_extra.py  download_model.py  eval.py  experiment_surrogate.py  export_names.py  export_patterns.py  run_api.sh  start_llm_server.sh  test_prompt_modes.py
tests/: benchmark_results.json  benchmark_results.tsv  benchmark_results_gpu.json  conftest.py  eval_results.json  experiment_surrogate.json  full_pipeline_benchmark.json  generate_messy_data.py  generate_test_data.py  hard_cases.json  messy_test_data.json  negatives.json  test_against_dataset.py  test_api.py  test_client.py  test_data.csv  test_detection_gaps.py  test_detectors.py  test_false_positives.py  test_mapping.py  test_ner.py  test_scrubber.py  test_secrets.py  test_streaming.py
